spacing issue and version bump

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -77,8 +77,9 @@
   margin-right: 0 !important;
   border-radius: 0 !important;
   margin-top: 0 !important;
-  border: 0px;
-  box-shadow: 0px 3px 5px #1717171a;
+  margin-bottom: 7pt;
+  box-shadow: 0 2px 4px #1717172e;
+  border: 1px solid #dcdcdc8c;
 }
 
 .d-card ion-card-content {
